recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:8: error: not found: value sqrt
    crabKoch(levels-1,length*sqrt(2));
                             ^Crab:10: error: not found: value sqrt
    crabKoch(levels-1,length*sqrt(2));
                             ^